Fix content box action bar alignment

--- a/client/public/style/viewport.less
+++ b/client/public/style/viewport.less
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+	width: .25em;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: @mlGray;
+}
+
 #viewport {
 	bottom: @playerHeight + @margins;
 	left: @barWidth + 2*@margins;
@@ -34,6 +42,10 @@
 		.inline-box {
 			.white-box;
 			display: inline-block;
+
+			&> .menu {
+				float: right;
+			}
 		}
 
 		.content-box {
@@ -44,7 +56,7 @@
 				padding-top: 2 * @margins;
 			}
 
-			&> .menu {
+			&> .menu, &> .content-box-actions {
 				float: right;
 				margin-bottom: @contentBoxMargin;
 			}
